# PathoSynVLM

./: .gitignore  404.html  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MODEL_CARD.md  README.md  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: deploy-pages.yml  validate-site.yml
assets/: README.md
audit/: histai_domain_wsi_patch_stats_5x512.md  histai_metadata_filter_stats.md  internal_experiment_snapshot_2026-02-27.md  internal_repo_audit.md
configs/: paper_hyperparameters.json  paths.example.env  reported_results.json  stage1_alignment_paper.json  stage2_main_paper.json  stage2_wsi_marker_ablation.json
docs/: data.md  embeddings.md  huggingface_release.md  paper_pipeline.md  release_checklist.md  weights.md
pathosynvlm/: __init__.py  alignment_dataset.py  alignment_model.py  histai_dataset.py  metrics.py  model.py  paths.py
scripts/: evaluate_checkpoint.py  export_release_weights.py  generate_case_report.py  prepare_hf_release.py  prepare_histai_metadata.py  prepare_stage1_metadata.py  train_stage1_alignment.py  train_stage2_histai.py  validate_site.py
site/: 404.html  index.html
site/static/css/: site.css
site/static/js/: site.js
slurm/: evaluate.sbatch  stage1_alignment.sbatch  stage2_histai.sbatch
static/css/: index.css
static/js/: index.js
weights/: README.md
