[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathosynvlm"
version = "0.1.0"
description = "Token-efficient VLM for case-level pathology synoptic report generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA-4.0" }
dependencies = [
  "torch",
  "transformers",
  "peft",
  "accelerate",
  "tqdm",
  "numpy",
  "h5py",
  "evaluate",
  "rouge-score",
  "sacrebleu",
  "nltk",
  "bert-score",
]

[tool.setuptools.packages.find]
include = ["pathosynvlm*"]
